--- a/style.css
+++ b/style.css
@@ -11,21 +11,27 @@ body{
 
 header {
     margin: 20px 0 30px 40px;
-    margin-bottom: 30px;
+    margin-bottom: 30px;    
 }
 
-figure {
+.logo{
+    height:20px;
+}
+
+.modelMobile {
+    width: 100%;
     margin-bottom: 60px;
 }
 
 h1 {
-    margin-bottom: 20px;
+    margin: 0 auto 20px auto;
     padding: 0 40px 0 40px;
     text-transform: uppercase;
     letter-spacing: 7px;
     color: hsl(0, 6%, 24%);
     text-align: center;
     font-weight: 600;
+    max-width: 300px;
 }
 
 #We-re{
@@ -44,8 +50,9 @@ h1 {
 form {
     height:80px;
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 50px;
     margin-left: 15px;
+    position: relative;
 }
 
 input {
@@ -54,7 +61,7 @@ input {
     border-radius: 50px;
     border: 1px solid hsl(0, 36%, 70%);
     outline:none;
-    padding-left: 20px;
+    padding-left: 20px;    
 }
 
 
@@ -73,7 +80,8 @@ button{
     border-radius: 50px;
     font-weight: 600;    
     padding: 0;    
-    transform: translateX(-40px);
+    position: absolute;
+    left: 250px;
     color: white;
     background-image: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
     border: none;
@@ -85,17 +93,24 @@ button:hover{
     background-image: linear-gradient(135deg, hsl(0, 80%, 86%), hsla(0, 89%, 89%, 0.952));
 }
 
-#errorMessage{
-    margin-top: 5px;
-    padding-left: 20px;
+.errorMessage{
+    width: 190px;
+    margin-top: 10px;
+    margin-left: 35px;
     text-align: left;
     color: hsl(0, 93%, 68%);
-    opacity: 0;
+    opacity: 1;
+    position: absolute;
+    top: 50%;
+    left: 50px;    
 }
 
-#errorMessageIcon{
-    transform: translate(200%,-380%);
-    opacity:0;
+.errorIcon{
+    position: absolute;
+    top: 12%;
+    left: 59%;
+    height: 20px;
+    opacity: 0;
 }
 
 footer{
@@ -106,7 +121,8 @@ footer{
 }
 
 a{
-    text-decoration: none;        
+    text-decoration: none;
+    color: hsl(0, 6%, 24%);        
 }
 
 a:hover{
@@ -117,4 +133,74 @@ a:hover{
 
 a:visited{
     color: hsl(0, 6%, 24%);
+}
+
+@media screen and (min-width: 600px){
+
+    
+    .logo {
+        height: 30px;
+        margin-left: 90px;
+        margin-bottom:80px;
+    }
+    
+    .container{
+        display:flex; 
+    }
+    
+    .left{
+        width: 60%;
+        background-image: url("images/bg-pattern-desktop.svg");
+        background-size: cover;
+        background-position: center center;
+    }
+
+    h1{
+        text-align: left;
+        font-size:40px;
+        margin-left: 120px;
+        padding-left:10px;
+    }
+
+    .innerContainer{
+        max-width: 500px;
+    }
+
+    #paragraphMain{
+        text-align: left;
+        margin-left: 120px;
+    }
+
+    form{
+        margin-left: 120px;
+        text-align:left;
+    }
+
+    .right {
+        width: 40%;
+        height:600px;
+
+    }
+
+    .modelMobile{
+        display:none;
+    }
+
+    .modelDesktop{
+        background-image: url('./images/hero-desktop.jpg');
+        background-size: cover;
+        background-position: center center;
+    }
+}
+
+@media screen and (max-width: 737px){
+
+    input{
+        width: 200px;
+    }
+
+    button{
+        left:160px;
+    }
+
 }
